[APPBUG-1885] group scale and atc spacing fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25936 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/pdp_main.css
+++ b/projects/Media/docroot/assets/css/pdp/pdp_main.css
@@ -234,6 +234,10 @@ span.cssbutton.annotation:hover {
 	color:#360;
 }
 
+.pdp-info > *:last-child{
+  margin-bottom:0px;
+}
+
 .pdp .skucontrol-salesunit{
 	margin-bottom:15px;
 }
